--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,11 @@
-# ignore everything in the root except the "wp-content" directory.
-!wp-content/
-
-# ignore everything in the "wp-content" directory, except:
-# "mu-plugins", "plugins", "themes" directory
-wp-content/*
-!wp-content/mu-plugins/
-!wp-content/plugins/
-!wp-content/themes/
-
-# ignore these plugins
-wp-content/plugins/hello.php
-
-# ignore specific themes
-wp-content/themes/twenty*/
-
 # ignore node dependency directories
-node_modules/
+node_modules/*
+vendor/*
+composer.lock
+package-lock.json
 
-# ignore log files and databases
+# ignore log files, databases and zip files.
 *.log
 *.sql
 *.sqlite
+*.zip
